syntax = "proto3";

option go_package = "github.com/ucok-man/h8-p3-ngc/pb";

package user;

message User {
  string id = 1;
  string name = 2;
}

message CreateUserRequest { User user = 1; }

message CreateUserResponse { User user = 2; }

message GetAllUserRequest {}

message GetAllUserResponse { repeated User users = 1; }

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc GetAllUser(GetAllUserRequest) returns (GetAllUserResponse) {};
}
